Refactored Products APIs for optimized querys and debugging
