# api/v1/docs/api-docs.yaml
@@ -47,14 +47,6 @@ paths:
                   type: "string"
                 description:
                   type: "string"
-                status:
-                  type: "integer"
-                time_in:
-                  type: "string"
-                date_in:
-                  type: "string"
-                date_updated:
-                  type: "string"
   /product/list:
     get:
       tags:
@@ -65,12 +57,17 @@ paths:
           in: "query"
           description: "This is the product id of the category we are fetching from a database. This is for multi-category use case."
           schema:
-            type: "string"
+            type: "integer"
         - name: "category_id"
           in: "query"
           description: "This is the product name of the category we are fetching from a database. This is for multi-category use case."
           schema:
-            type: "string"
+            type: "integer"
+        - name: "select_all"
+          in: "query"
+          description: "This is returns all products assigned to the database."
+          schema:
+            type: "integer"
         - name: "count"
           in: "query"
           description: "This returns the number of products you set in the count field"
@@ -81,9 +78,9 @@ paths:
           description: "Returns an array of data with less than the last row id passed. If not passed, it defaults to zero"
           schema:
             type: "integer"
-        - name: "select_all"
+        - name: "sort_by"
           in: "query"
-          description: "This is returns all products assigned to the database."
+          description: "Returns an array based on either ascending or descending order"
           schema:
             type: "integer"
       responses:
@@ -104,7 +101,7 @@ paths:
           in: "query"
           description: "This is the product-id of the product we are fetching from a category. This is for multi-products use case."
           schema:
-            type: "integer"
+            type: "string"
   /product/delete/id:
     post:
       tags:
@@ -202,6 +199,11 @@ paths:
           description: "This is the category id of the category we are fetching from a database. This is for multi-category use case."
           schema:
             type: "integer"
+        - name: "select_all"
+          in: "query"
+          description: "This is returns all categories assigned to the database."
+          schema:
+            type: "integer"
         - name: "count"
           in: "query"
           description: "Fetch categories by a defined limit or count"
@@ -212,16 +214,11 @@ paths:
           description: "Returns an array of data with less than the last row id passed. If not passed,it defaults to zero"
           schema:
             type: "integer"
-        - name: "select_all"
-          in: "query"
-          description: "This is returns all categories assigned to the database."
-          schema:
-            type: "integer"
-        - name: "sort_order"
+        - name: "sort_by"
           in: "query"
           description: "Change the order in which data is returned either ascending or descending"
           schema:
-            type: "string"
+            type: "integer"
       responses:
         200:
           description: "Successfully fetched all categories from the database"
